--- a/index.html
+++ b/index.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>푸바스콘 짤 생성기</title>
     <link rel="stylesheet" href="./css/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jua&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="title">푸바스콘 짤 생성기</h1>
+    <h1 class="title">푸바스콘 짤 생성기 <p style="font-size: 30px; float: right; margin: 0;"><a href="https://www.youtube.com/c/withEverland" target="_blank" style="text-decoration: none;">🐼</a></p></h1>
+    <p style="text-align: center;">위 사이트는 pc에 가장 최적화 되어 있습니다.</p>
+
     <canvas id="original" width="1280" height="720"></canvas>
     <label class="keywords">
-        속쓰림 키워드:
+        속쓰림 키워드 (구분은 쉼표(,) 로 해주세요!):
         <input id="negative-input" type="text" value="코로나">
     </label>
     <div style="margin-top: 16px;">
-        <button id="download-button">다운로드</button>
+        <button id="download-button">🐼 푸바스콘 다운로드 🐼</button>
     </div>
     <script src="js/app.js"></script>
 </body>
